# fork-tiger

./: .gitignore  Dockerfile  Makefile  Makefile.common  Makefile.config  Tiger.nw  Tiger_extra.nw  authors.txt  canonical.ml  canonical.mli  codegen.ml  codegen.mli  configure  driver.ml  driver.nw  dune  dune-project  environment.nw  error.ml  error.mli  frame.mli  gc.c  gc.nw  lexer.ml  list_nw  list_other  main.ml  main.nw  mkfile  option.ml  option.mli  option.nw  pad.txt  parser.ml  parser.mli  readme-nodeps.txt  readme-orig.txt  readme.txt  runtime.nw  semantics.mli  (+12 more)
.github/workflows/: docker.yml
backend/: Makefile  codegen.ml  codegen.mli  codegen.nw  dune  frame.ml  frame.mli  frame.nw
demos/: forloop.tig  hello.tig
docs/: doc.tex  hello.c--
docs/latex/: Makefile.common
docs/original-sml-project/: pad.txt
docs/principia/: Makefile  (+1 more)
frontend/: Makefile  canonical.ml  canonical.mli  canonical.nw  dune  environment.ml  environment.mli  environment.nw  frame.ml  frame.mli  semantics.ml  semantics.mli  semantics.nw  symbol.ml  symbol.mli  translate.ml  translate.mli  translate.nw  tree.ml  tree.mli  tree.nw
ldb/: ldb.nw  ldbtiger.nw  test.nw
main/: dune
old/: build.sh  configure  rules.mk
parsing/: Makefile  ast.ml  ast.mli  ast.nw  dune  error.ml  error.mli  error.nw  lexer.mll  option.ml  option.mli  option.nw  parser.mly  parser.nw  symbol.ml  symbol.mli  symbol.nw
runtime/: Makefile  alloc.c--  client.c  gc.c  gc.h  gc.nw  runtime.c--  runtime.nw
stdlib/: Makefile  misc.diff  stdlib.c  stdlib.h  stdlib.nw  stdlibcmm.c--
test/: rb.tig  rc4.tig  sieve.tig  spawn.tig
tests/: arrays.tig  colmajor.tig  exceptions.tig  funcall.tig  qsort.tig  queens.tig  tiger.lua  tiger.tst  wff.tig
todo/: tiger.ld
(+4 files in other folders)
